2006-04-25  Miguel de Icaza  <miguel@novell.com>

	* TypeConverter.cs (ConvertFrom): Do not crash if we are passed a
	null value. 

2006-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* BaseNumberConverter.cs : (ConvertTo) regardless of InnerType,
	  it converts the argument value to InnerType using supplied format.
	  (It might be not limited to NET_2_0 but it's too cosmetic to dig
	  into the problem. At least this is for run-test-ondotnet fixes.)

2006-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* BackgroundWorker.cs, RunWorkerCompletedEventArgs.cs :
	  cosmetic attribute fixes.

2006-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncOperation.cs,
	  AsyncOperationManager.cs
	  BackgroundWorker.cs
	  DoWorkEventArgs.cs
	  DoWorkEventHandler.cs
	  RunWorkerCompletedEventArgs.cs
	  RunWorkerCompletedEventHandler.cs :
	  Initial implementation of AsyncOperation and BackgroundWorker.

	  (However I think it does not work as expected - it depends on
	  SynchronizationContext.Post() and I doubt it works fine - the
	  callback should run synchronously while it does not look so.)

2006-03-30  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncCompletedEventArgs.cs : constructor did not initialize fields.

2006-03-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ProgressChangedEventHandler.cs ProgressChangedEventArgs.cs :
	  added 2.0 types.

2006-02-26  Pedro Martinez Julia  <pedromj@gmail.com>

	* HandledEventHandler.cs: Resolving a "Replaced" SVN flag.

2006-02-23 Andrew Skiba <andrews@mainsoft.com>

	* TypeDescriptor.cs: performance improvement for GetAttributes,
	GetProperties and GetEvents. See the standalone test for the use case.

2006-01-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Container.cs: patch by Brian Crowell that fixes GetService().

2006-01-22  Chris Toshok  <toshok@ximian.com>

	* DesignerSerializationVisibilityAttribute.cs: in the 2.0 case,
	this attribute is valid on fields and events as well.

2005-11-19  Zoltan Varga  <vargaz@gmail.com>
